@@ -1,3 +1,8 @@
+2014-09-12  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* libc/time/month_lengths.c: Actually add file this time.
+	* libc/time/tzcalc_limits.c: Ditto.
+
 2014-09-11  Freddie Chopin  <freddie_chopin@op.pl>
 
 	* libc/time/month_lengths.c: New file with __month_lengths array
